# Wazivo

./: .env.example  .gitignore  BRANDING.md  CONTRIBUTING.md  INSTALLATION.md  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  REPO_REVIEW_2026-03-26.md  SUPPORT.md  audit-checkpoint.md  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vercel.json
.github/: FUNDING.yml  TRIGGER_FORMAT.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-format.yml  ci.yml  e2e.yml
api/: index.py  main.py  pyproject.toml  requirements.txt
docs/: Architecture.md  Configuration.md  FAQ.md  Installation.md  Quick-Start.md  README.md
e2e/: smoke.spec.ts
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/[lang]/: layout.tsx  page.tsx
src/app/about/: page.tsx
src/app/admin/: page.tsx
src/app/affiliate-disclosure/: page.tsx
src/app/components/: AnalysisResults.tsx  ErrorBoundary.tsx  FileUpload.tsx  LoadingState.tsx
src/app/config/: platforms.ts
src/app/contact/: page.tsx
src/app/faq/: page.tsx
src/components/: JobMatches.tsx  LanguageSwitcher.tsx  MissingSkills.tsx  Report.tsx  ResumeUpload.tsx  ScoreCard.tsx  SkillsList.tsx
src/lib/: affiliates.ts  atsScore.ts  careerResources.ts  i18n.ts  promptTemplates.ts  reportGenerator.ts  resumeAnalyzer.ts  runtime.ts  skillExtractor.ts
tasks/: lessons.md  todo.md
tests/e2e/: error-handling.spec.ts  upload.spec.ts
tests/unit/: validation.test.ts
(+21 files in other folders)
