[project]
name = "wazivo-scrapling"
version = "2.0.0"
description = "Scrapling-powered web scraping service for Wazivo"
requires-python = ">=3.10"
dependencies = [
    "scrapling[fetchers]"
]

[tool.pip]
# After installing, run: scrapling install
# This downloads Playwright browsers (Chromium) needed by StealthyFetcher/DynamicFetcher
